--- a/SRC/My-Zone/My-Zone/MVVM/View/MMDetailImageCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMDetailImageCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -15,17 +15,20 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="319.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="slC-oD-nvw">
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slC-oD-nvw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="319.5"/>
-                        <animations/>
+                        <connections>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="Ron-jZ-uB9"/>
+                        </connections>
                     </scrollView>
-                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="ECk-ZR-puB">
+                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ECk-ZR-puB">
                         <rect key="frame" x="141" y="258" width="39" height="37"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="37" id="8lm-tn-ixf"/>
                             <constraint firstAttribute="width" constant="39" id="LuQ-Z9-4eo"/>
                         </constraints>
+                        <color key="pageIndicatorTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="currentPageIndicatorTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </pageControl>
                     <view alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rru-ce-Uik">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="319.5"/>
@@ -35,7 +38,6 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="查看更多照片需要花费五金币，现在就看吗？" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Vi-8g-1X7">
                                         <rect key="frame" x="0.0" y="0.0" width="280" height="41"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="41" id="X1m-Wc-lXO"/>
                                         </constraints>
@@ -45,7 +47,6 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYn-b5-5L8">
                                         <rect key="frame" x="70" y="51" width="140" height="40"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="140" id="QIV-v3-XhS"/>
                                             <constraint firstAttribute="height" constant="40" id="TUF-RG-EB8"/>
@@ -64,9 +65,11 @@
                                                 <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="sureButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="yPH-F5-OGh"/>
+                                        </connections>
                                     </button>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="gYn-b5-5L8" firstAttribute="centerX" secondItem="T3K-ge-hKk" secondAttribute="centerX" id="9uu-A9-Ws7"/>
@@ -79,7 +82,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="T3K-ge-hKk" firstAttribute="centerX" secondItem="Rru-ce-Uik" secondAttribute="centerX" id="0f1-Nz-FAp"/>
@@ -89,7 +91,6 @@
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="ECk-ZR-puB" secondAttribute="bottom" constant="16" id="9s5-2V-nMD"/>
                     <constraint firstAttribute="bottomMargin" secondItem="slC-oD-nvw" secondAttribute="bottom" constant="-8" id="AwI-jH-NDr"/>
@@ -103,8 +104,8 @@
                     <constraint firstItem="slC-oD-nvw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="vtY-XX-O09"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
+                <outlet property="maskView" destination="Rru-ce-Uik" id="RyS-no-8lF"/>
                 <outlet property="pageControl" destination="ECk-ZR-puB" id="bXm-7I-h1x"/>
                 <outlet property="scrollView" destination="slC-oD-nvw" id="knc-fy-XL0"/>
                 <outlet property="seeAllPhotos" destination="gYn-b5-5L8" id="24i-dS-p09"/>
