--- a/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserDescriptionCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserDescriptionCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,14 +17,12 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我是一个有高素质的人才" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C35-gb-16b">
                         <rect key="frame" x="98" y="12" width="206" height="19.5"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.49548216540404044" green="0.49548216540404044" blue="0.49548216540404044" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="个人签名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A95-4A-jN8">
                         <rect key="frame" x="16" y="11" width="70" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="HdI-Tr-9Mc"/>
                             <constraint firstAttribute="height" constant="21" id="oed-oW-mRP"/>
@@ -34,7 +32,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="A95-4A-jN8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="0II-14-Yt2"/>
                     <constraint firstItem="C35-gb-16b" firstAttribute="leading" secondItem="A95-4A-jN8" secondAttribute="trailing" constant="12" id="I6t-jV-jDd"/>
@@ -44,7 +41,9 @@
                     <constraint firstAttribute="bottomMargin" secondItem="C35-gb-16b" secondAttribute="bottom" constant="4" id="wNB-zt-Q5i"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
+            <connections>
+                <outlet property="signLabel" destination="C35-gb-16b" id="hFZ-2L-7a4"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
