--- a/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserEvaluteCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserEvaluteCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -20,7 +20,6 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GoodEvalute" translatesAutoresizingMaskIntoConstraints="NO" id="sZJ-Xe-CjL">
                                 <rect key="frame" x="13" y="0.0" width="25" height="21"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="mLZ-D8-pep"/>
                                     <constraint firstAttribute="height" constant="21" id="zNM-3V-aZc"/>
@@ -28,7 +27,6 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="赞(23)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zh3-AP-b1a">
                                 <rect key="frame" x="8" y="22" width="50" height="12"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="50" id="Dpj-Lh-P1U"/>
                                     <constraint firstAttribute="height" constant="12" id="uA8-F1-bNP"/>
@@ -38,7 +36,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" priority="750" constant="50" id="IFJ-uD-qRW"/>
@@ -55,7 +52,6 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BadEvalute" translatesAutoresizingMaskIntoConstraints="NO" id="fjR-Tb-ZBa">
                                 <rect key="frame" x="13" y="0.0" width="25" height="21"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="25" id="QOt-1p-PpK"/>
                                     <constraint firstAttribute="height" constant="21" id="vX7-fN-bGn"/>
@@ -63,7 +59,6 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="踩(12)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hp-jQ-xwR">
                                 <rect key="frame" x="8" y="22" width="50" height="12"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="12" id="1yM-JZ-v77"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="50" id="hqT-80-fIn"/>
@@ -73,7 +68,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fjR-Tb-ZBa" firstAttribute="top" secondItem="ebN-1l-EVk" secondAttribute="top" id="1bd-1K-dP1"/>
@@ -87,24 +81,20 @@
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9OO-yt-8JY">
                         <rect key="frame" x="66" y="18" width="188" height="13.5"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.24929103280161163" green="0.69535195707070707" blue="0.07547906339779574" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0t6-Te-9j3">
                         <rect key="frame" x="66" y="18" width="116" height="13.5"/>
-                        <animations/>
                         <color key="backgroundColor" red="1" green="0.75689495431900977" blue="0.15503939000630862" alpha="1" colorSpace="calibratedRGB"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hT4-m6-BLt">
                         <rect key="frame" x="16" y="49" width="288" height="1"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.89816130049999998" green="0.89816130049999998" blue="0.89816130049999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="bWQ-al-8RB"/>
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="hT4-m6-BLt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="7oH-X1-dDy"/>
                     <constraint firstAttribute="bottomMargin" secondItem="9OO-yt-8JY" secondAttribute="bottom" constant="10" id="840-tf-c4I"/>
@@ -125,8 +115,10 @@
                     <constraint firstItem="SWS-n7-nQY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="yZo-FX-0Ga"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
+                <outlet property="goodEvaluteConstraint" destination="uDd-lI-zyd" id="e1L-0e-t8i"/>
+                <outlet property="goodLabel" destination="Zh3-AP-b1a" id="26F-aw-WG6"/>
+                <outlet property="oohNoLabel" destination="2hp-jQ-xwR" id="ftp-La-Zmm"/>
                 <outlet property="sepratorLineHeight" destination="bWQ-al-8RB" id="cQX-EP-dBQ"/>
             </connections>
             <point key="canvasLocation" x="278" y="380"/>
