--- a/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserMessageCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMDetailUserMessageCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="潘金莲" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pgg-5k-UEg">
                         <rect key="frame" x="16" y="16" width="51" height="18"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="QTI-Dz-YbW"/>
                             <constraint firstAttribute="height" constant="18" id="scg-ms-rzu"/>
@@ -28,7 +27,6 @@
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Locate" translatesAutoresizingMaskIntoConstraints="NO" id="NGk-yv-atr">
                         <rect key="frame" x="16" y="42" width="8" height="9"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="8" id="UMc-fM-1XQ"/>
                             <constraint firstAttribute="height" constant="9" id="hPC-bv-gxG"/>
@@ -36,7 +34,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="800米" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LzF-uh-tOc">
                         <rect key="frame" x="32" y="40" width="35" height="14"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="CSQ-40-r5S"/>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="45" id="Jve-xE-nem"/>
@@ -47,7 +44,6 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35岁" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eq-qW-kCG">
                         <rect key="frame" x="75" y="16" width="37.5" height="18"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="50" id="AYg-bd-O2v"/>
                             <constraint firstAttribute="height" constant="18" id="b47-Zf-EOh"/>
@@ -58,7 +54,6 @@
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LatestTime" translatesAutoresizingMaskIntoConstraints="NO" id="U1v-8M-N1V">
                         <rect key="frame" x="75" y="42" width="8" height="9"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="8" id="MRY-mv-Rz3"/>
                             <constraint firstAttribute="height" constant="9" id="nfS-DW-ZyC"/>
@@ -66,7 +61,6 @@
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VIP1" translatesAutoresizingMaskIntoConstraints="NO" id="zsZ-bN-9bj">
                         <rect key="frame" x="269" y="16" width="31" height="10"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="10" id="Dpg-Dw-xyO"/>
                             <constraint firstAttribute="width" constant="31" id="YFT-bS-CYz"/>
@@ -74,7 +68,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16分钟钱来过" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeL-5A-GBf">
                         <rect key="frame" x="91" y="40" width="73.5" height="14"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="O5G-u4-SoW"/>
                             <constraint firstAttribute="height" constant="14" id="fU5-jE-qmL"/>
@@ -85,14 +78,12 @@
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Lo-25-dB6">
                         <rect key="frame" x="16" y="63" width="288" height="1"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.8981613005050505" green="0.8981613005050505" blue="0.8981613005050505" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="otm-sq-fru"/>
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="zsZ-bN-9bj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="68D-ld-UEU"/>
                     <constraint firstAttribute="bottomMargin" secondItem="7Lo-25-dB6" secondAttribute="bottom" constant="-9" id="6yo-9J-AjW"/>
@@ -113,9 +104,13 @@
                     <constraint firstItem="Pgg-5k-UEg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="yOK-3M-aBb"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
+                <outlet property="ageLabel" destination="7eq-qW-kCG" id="A3W-H3-hgg"/>
+                <outlet property="distanceLabel" destination="LzF-uh-tOc" id="WGh-f7-tyY"/>
+                <outlet property="nameLabel" destination="Pgg-5k-UEg" id="iBo-Pw-nzs"/>
                 <outlet property="sepratorLineHeight" destination="otm-sq-fru" id="ifQ-6i-ou8"/>
+                <outlet property="timeLabel" destination="DeL-5A-GBf" id="bu2-PW-TLL"/>
+                <outlet property="vipImage" destination="zsZ-bN-9bj" id="mgT-JN-kHE"/>
             </connections>
         </tableViewCell>
     </objects>
