--- a/SRC/My-Zone/My-Zone/MVVM/View/MMUserCenterDefaultCell.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMUserCenterDefaultCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,7 +17,6 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FriendSayIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Oik-f8-E3u">
                         <rect key="frame" x="23" y="15" width="14" height="14"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="14" id="5dr-P6-3Zd"/>
                             <constraint firstAttribute="height" constant="14" id="EJB-ar-p1L"/>
@@ -25,7 +24,6 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好友赞" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHl-KI-ut0">
                         <rect key="frame" x="52" y="11" width="51" height="20.5"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20.5" id="67x-Yu-GE6"/>
                             <constraint firstAttribute="width" constant="51" id="MLL-KP-sbq"/>
@@ -35,7 +33,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="Oik-f8-E3u" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="121-w9-JvH"/>
                     <constraint firstItem="Oik-f8-E3u" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PPr-2G-07s"/>
@@ -43,7 +40,6 @@
                     <constraint firstItem="PHl-KI-ut0" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vpX-yX-k2s"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
         </tableViewCell>
     </objects>
     <resources>
