--- a/SRC/My-Zone/My-Zone/MVVM/View/MMUserCenterHeaderView.xib
+++ b/SRC/My-Zone/My-Zone/MVVM/View/MMUserCenterHeaderView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,12 +13,10 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Zb-fF-c7Q">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="275"/>
-                    <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2R8-mK-RHV">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="223"/>
-                    <animations/>
                     <color key="backgroundColor" red="1" green="0.87689096950000001" blue="0.29777247489999997" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="223" id="QSg-aU-skT"/>
@@ -26,7 +24,6 @@
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0rv-6i-frJ">
                     <rect key="frame" x="30" y="196" width="62" height="62"/>
-                    <animations/>
                     <color key="backgroundColor" red="0.49729766590000002" green="0.76396742880000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="62" id="uey-Ba-qmS"/>
@@ -35,7 +32,6 @@
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VIP1" translatesAutoresizingMaskIntoConstraints="NO" id="AYI-b9-zti">
                     <rect key="frame" x="150" y="237" width="31" height="10"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="10" id="6fZ-Um-vhv"/>
                         <constraint firstAttribute="width" constant="31" id="mr3-Cf-KSs"/>
@@ -43,7 +39,6 @@
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="金三胖" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cnl-I4-WId">
                     <rect key="frame" x="100" y="231" width="45" height="21"/>
-                    <animations/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="06Q-3b-ypW"/>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="nTU-HO-4FT"/>
@@ -53,7 +48,6 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="AYI-b9-zti" firstAttribute="top" secondItem="2R8-mK-RHV" secondAttribute="bottom" constant="14" id="6g8-9e-UIF"/>
